Formato de código

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="image-container">
   </div>
   <main class="container">
-
+  
     <h2 id="indice">
       <a href="#indice">#</a>
       Índice
@@ -47,6 +47,7 @@
       <li><a href="#marco-teorico">Marco Teórico</a></li>
       <li><a href="#tesis">Tesis y Argumentos</a></li>
       <li><a href="#conclusion">Conclusión</a></li>
+      <li><a href="#bibliografia">Bibliografía</a></li>
     </ul>
     <h2 id="introduccion">
       <a href="#introduccion">#</a>
@@ -60,9 +61,7 @@
       ámbitos de la vida, incluyendo el acceso a la educación, la participación política, el empleo, la toma
       de
       decisiones y la eliminación de la violencia de género.</p>
-
-
-
+  
     <h2 id="marco-teorico">
       <a href="#marco-teorico">#</a>
       Marco Teórico
@@ -70,40 +69,40 @@
     <p>La equidad de género se fundamenta en una serie de teorías y conceptos clave que respaldan su importancia
       en
       la sociedad actual. Algunos de los fundamentos teóricos más destacados incluyen:</p>
-
+  
     <ol>
       <li><strong>Feminismo:</strong> El feminismo es un movimiento que ha desempeñado un papel fundamental en
         la promoción de la equidad de género. Se basa en la idea de que las mujeres deben tener los mismos derechos
         y oportunidades que los hombres en todas las áreas de la vida.</li>
-
+  
       <li><strong>Teoría de Roles de Género:</strong> Esta teoría explora cómo las expectativas sociales y
         culturales influyen en los roles y comportamientos de género. Destaca cómo la sociedad ha asignado
         históricamente roles específicos a hombres y mujeres y cómo esto ha llevado a desigualdades degénero.
       </li>
-
+  
       <li><strong>Teoría de la Construcción Social del Género:</strong> Esta teoría argumenta que el género no es
         una característica innata, sino una construcción social. Se enfoca en cómo la sociedad y la cultura
         influyen en la percepción y expresión del género.</li>
-
+  
       <li><strong>Derechos Humanos:</strong> La equidad de género está intrínsecamente relacionada con los
         derechos humanos. Los instrumentos internacionales, como la Declaración Universal de Derechos
         Humanos y la Convención sobre la Eliminación de Todas las Formas de Discriminación contra la Mujer (CEDAW),
         establecen la igualdad de género como un derecho fundamental.</li>
-
+  
       <li>
         <strong>Estudios de Género:</strong>
         Los estudios de género son una disciplina académica que examina
         críticamente las cuestiones de género y sexualidad. Ayudan a comprender cómo las estructuras de
         poder ylas normas sociales afectan a las personas en función de su género.
       </li>
-
+  
       <li>
         <strong>Empoderamiento de las Mujeres:</strong>
         El empoderamiento de las mujeres se centra en
         fortalecer la capacidad de las mujeres para tomar decisiones y controlar sus vidas. Es un componente central de
         laequidad de género y se basa en teorías de la autonomía y la participación activa.
       </li>
-
+  
       <li><strong>Igualdad de trabajo:</strong> La iguadad de trabajo es una parte importante para determinar la
         equidad de genero; por muchos años los hombres han recibido mayores beneficios que las mujeres durante
         decadas, pero ahora las mujeres estan luchando por un trabajo digno e igualitario.</li>
@@ -136,7 +135,7 @@
         equidad de género está relacionada con la mejora de la salud y el bienestar en la sociedad, ya que se traduce en
         un acceso más equitativo a servicios de salud, reducción de la violencia de género y una mayor calidad de vida
         para todas las personas.
-
+  
       </li>
       <li>
         <strong>¿Qué avances se han logrado en la promoción de la equidad de género en las últimas décadas?:</strong> En
@@ -152,9 +151,9 @@
         en la sociedad.
       </li>
     </ol>
-
-
-
+  
+  
+  
     <h2 id="tesis">
       <a href="#tesis">#</a>
       Tesis y Argumentos
@@ -163,9 +162,9 @@
     <p>La equidad de género es un imperativo social y moral que busca la igualdad de oportunidades y derechos
       para todas las personas, independientemente de su género, con el fin de construir una sociedad más justa y
       equitativa.</p>
-
+  
     <h3>Argumentos</h3>
-
+  
     <ol>
       <li>
         <strong>Justicia y Derechos Humanos:</strong> La equidad de género es esencial para garantizar que
@@ -178,7 +177,8 @@
         para garantizar una representación justa de mujeres y hombres en los órganos de toma de decisiones.
       </li>
       <li>
-        <strong> ¿guerra de egos o una batalla necesaria?</strong>La búsqueda de la equidad de género a menudo se debate
+        <strong> ¿Una guerra de egos o una batalla necesaria?:</strong> La búsqueda de la equidad de género a menudo se
+        debate
         como una lucha que involucra diferentes perspectivas. Algunos argumentan que esta lucha es impulsada por egos
         individuales, una búsqueda de reconocimiento y poder. Sin embargo, otros sostienen que es una batalla necesaria
         para corregir desigualdades profundamente arraigadas en la sociedad.
@@ -186,16 +186,26 @@
         crucial para la creación de una sociedad más justa y equitativa. Independientemente de si algunos participantes
         pueden tener egos inflados, el objetivo de la equidad de género sigue siendo una causa noble que beneficia a
         toda la humanidad.
-
+  
       </li>
       <!-- Agrega más argumentos según sea necesario -->
     </ol>
-
-
-
-
-    <h2 id="Bibliografia">
-      <a href="Bibliografia">#</a>
+  
+    <h2 id="conclusion">
+      <a href="#conclusion">#</a>
+      Conclusión
+    </h2>
+    <p> Para Concluir debemos saber que la equidad de género es un asunto que afecta a todos en la sociedad.
+      No se trata solo de "ellas" o "ellos", sino de "nosotros". Cuando se trabaja juntos para derribar
+      estereotipos y promover la igualdad, todos se benefician.
+  
+      A pesar de que aún hay trabajo por hacer, el progreso hacia la equidad de genero es evidente en muchas
+      áreas. Se ha avanzado en la lucha contra la discriminacion y la violencia de genero. La igualdad de
+      oportunidades está en aumento.
+    </p>
+  
+    <h2 id="bibliografia">
+      <a href="#bibliografia">#</a>
       Bibliografia
     </h2>
     <h3>Referencias</h3>
@@ -213,23 +223,7 @@
     <li>
       <strong>ChatGPT:</strong> <a href="https://chat.openai.com/">https://chat.openai.com/</a>
     </li>
-
-
-
-
-
-    <h2 id="conclusion">
-      <a href="#conclusion">#</a>
-      Conclusión
-    </h2>
-    <p> Para Concluir debemos saber que la equidad de género es un asunto que afecta a todos en la sociedad.
-      No se trata solo de "ellas" o "ellos", sino de "nosotros". Cuando se trabaja juntos para derribar
-      estereotipos y promover la igualdad, todos se benefician.
-
-      A pesar de que aún hay trabajo por hacer, el progreso hacia la equidad de genero es evidente en muchas
-      áreas. Se ha avanzado en la lucha contra la discriminacion y la violencia de genero. La igualdad de
-      oportunidades está en aumento.
-    </p>
+    <br>
   </main>
   <br>
 
