--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="image-container">
   </div>
   <main class="container">
-  
+
     <h2 id="indice">
       <a href="#indice">#</a>
       Índice
@@ -61,99 +61,74 @@
       ámbitos de la vida, incluyendo el acceso a la educación, la participación política, el empleo, la toma
       de
       decisiones y la eliminación de la violencia de género.</p>
-  
+
     <h2 id="marco-teorico">
       <a href="#marco-teorico">#</a>
-      Marco Teórico
+      Marco teórico sobre la equidad de género
     </h2>
-    <p>La equidad de género se fundamenta en una serie de teorías y conceptos clave que respaldan su importancia
-      en
-      la sociedad actual. Algunos de los fundamentos teóricos más destacados incluyen:</p>
-  
-    <ol>
-      <li><strong>Feminismo:</strong> El feminismo es un movimiento que ha desempeñado un papel fundamental en
-        la promoción de la equidad de género. Se basa en la idea de que las mujeres deben tener los mismos derechos
-        y oportunidades que los hombres en todas las áreas de la vida.</li>
-  
-      <li><strong>Teoría de Roles de Género:</strong> Esta teoría explora cómo las expectativas sociales y
-        culturales influyen en los roles y comportamientos de género. Destaca cómo la sociedad ha asignado
-        históricamente roles específicos a hombres y mujeres y cómo esto ha llevado a desigualdades degénero.
-      </li>
-  
-      <li><strong>Teoría de la Construcción Social del Género:</strong> Esta teoría argumenta que el género no es
-        una característica innata, sino una construcción social. Se enfoca en cómo la sociedad y la cultura
-        influyen en la percepción y expresión del género.</li>
-  
-      <li><strong>Derechos Humanos:</strong> La equidad de género está intrínsecamente relacionada con los
-        derechos humanos. Los instrumentos internacionales, como la Declaración Universal de Derechos
-        Humanos y la Convención sobre la Eliminación de Todas las Formas de Discriminación contra la Mujer (CEDAW),
-        establecen la igualdad de género como un derecho fundamental.</li>
-  
-      <li>
-        <strong>Estudios de Género:</strong>
-        Los estudios de género son una disciplina académica que examina
-        críticamente las cuestiones de género y sexualidad. Ayudan a comprender cómo las estructuras de
-        poder ylas normas sociales afectan a las personas en función de su género.
-      </li>
-  
-      <li>
-        <strong>Empoderamiento de las Mujeres:</strong>
-        El empoderamiento de las mujeres se centra en
-        fortalecer la capacidad de las mujeres para tomar decisiones y controlar sus vidas. Es un componente central de
-        laequidad de género y se basa en teorías de la autonomía y la participación activa.
-      </li>
-  
-      <li><strong>Igualdad de trabajo:</strong> La iguadad de trabajo es una parte importante para determinar la
-        equidad de genero; por muchos años los hombres han recibido mayores beneficios que las mujeres durante
-        decadas, pero ahora las mujeres estan luchando por un trabajo digno e igualitario.</li>
-      <li>
-        <strong>¿Cuáles son los desafíos más significativos para lograr la igualdad de género en el ámbito
-          laboral?:</strong> Los desafíos en el ámbito laboral incluyen la brecha salarial de género y la falta de
-        representación de mujeres en roles de liderazgo.
-      </li>
-      <li>
-        <strong>¿Cómo se manifiesta la discriminación de género en la educación?:</strong> La discriminación de género
-        en
-        la educación se manifiesta en la falta de acceso a oportunidades educativas iguales para niñas y niños.
-      </li>
-      <li>
-        <strong>¿Cuál es el papel de la equidad de género en la participación política?:</strong> La equidad de género
-        es crucial en la participación política para garantizar una representación justa de mujeres y hombres en los
-        órganos de toma de decisiones.
-      </li>
-      <li>
-        <strong>¿Qué estrategias se han implementado para combatir la violencia de género?:</strong> Se han implementado
-        estrategias como campañas de sensibilización y legislación para combatir la violencia de género.
-      </li>
-      <li>
-        <strong>¿Cómo pueden los medios de comunicación influir en la percepción de la equidad de género?:</strong> Los
-        medios de comunicación pueden influir en la percepción de la equidad de género al promover estereotipos o
-        destacar ejemplos de igualdad.
-      </li>
-      <li>
-        <strong>¿Cuál es el impacto de la equidad de género en la salud y el bienestar de la sociedad?:</strong> La
-        equidad de género está relacionada con la mejora de la salud y el bienestar en la sociedad, ya que se traduce en
-        un acceso más equitativo a servicios de salud, reducción de la violencia de género y una mayor calidad de vida
-        para todas las personas.
-  
-      </li>
-      <li>
-        <strong>¿Qué avances se han logrado en la promoción de la equidad de género en las últimas décadas?:</strong> En
-        las últimas décadas, se han logrado avances significativos en áreas como la igualdad en el ámbito laboral, la
-        representación política de mujeres y la concienciación pública sobre la equidad de género. Aunque queda trabajo
-        por hacer, se han producido mejoras sustanciales.
-      </li>
-      <li>
-        <strong>¿Qué medidas concretas pueden tomarse para fomentar la igualdad de género en la sociedad?:</strong>
-        Las medidas concretas que incluyen las políticas gubernamentales que promueven la igualdad de oportunidades son
-        los programas
-        educativos que desafíen los estereotipos de género y la promoción de una cultura de respeto y no discriminación
-        en la sociedad.
-      </li>
-    </ol>
-  
-  
-  
+
+    <h3>Definición</h3>
+
+    <p>La equidad de género es un concepto que busca la igualdad de oportunidades y derechos para las mujeres y los
+      hombres, independientemente de su sexo, género, orientación sexual o identidad de género. Se basa en la idea de
+      que las mujeres y los hombres son iguales en dignidad y derechos, y que deben tener las mismas oportunidades para
+      participar en todos los ámbitos de la vida.</p>
+
+    <h3>Marco conceptual</h3>
+
+    <ul>
+      <li>Sexo: Es la condición biológica que determina si una persona es hombre o mujer.</li>
+      <li>Género: Es una construcción social que asigna roles, comportamientos, actitudes y valores a las personas
+        en función de su sexo.</li>
+      <li>Estereotipos de género: Son creencias que asignan características y comportamientos específicos a las
+        mujeres y los hombres.</li>
+      <li>Discriminación de género: Es la distinción, exclusión o restricción basada en el sexo, género, orientación
+        sexual o identidad de género que tenga por objeto o por resultado menoscabar o anular el reconocimiento, goce o
+        ejercicio, en igualdad de condiciones, de los derechos humanos y las libertades fundamentales de las mujeres y
+        los hombres.</li>
+    </ul>
+
+    <h3>Importancia</h3>
+
+    <ul>
+      <li>Es un derecho humano fundamental.</li>
+      <li>Es un requisito previo para el desarrollo sostenible.</li>
+      <li>Contribuye a la paz y la seguridad.</li>
+      <li>Mejora la salud y el bienestar de las personas.</li>
+    </ul>
+
+    <h3>Desafíos</h3>
+
+    <p>La equidad de género aún es un desafío en muchos países del mundo. Las mujeres siguen enfrentándose a la
+      discriminación en todos los ámbitos de la vida, incluyendo el acceso a la educación, el empleo, la salud y la
+      participación política.</p>
+
+    <h2>Acciones para promover la equidad de género</h2>
+
+    <ul>
+      <li>Promover la igualdad de derechos y oportunidades para las mujeres y los hombres.</li>
+      <li>Combatir los estereotipos de género y la discriminación.</li>
+      <li>Empoderar a las mujeres y las niñas.</li>
+    </ul>
+
+
+
+
+
+    <h3>Recomendaciones</h3>
+
+    <ul>
+      <li>Para profundizar en el tema de la equidad de género, te recomiendo consultar los siguientes recursos:</li>
+      <li>Convención sobre la Eliminación de Todas las Formas de Discriminación contra la Mujer (CEDAW)</li>
+      <li>Objetivos de Desarrollo Sostenible (ODS)</li>
+      <li>Plan Nacional de Igualdad de Género (PNIG)</li>
+      <li>Programa de las Naciones Unidas para el Desarrollo (PNUD)</li>
+      <li>Fondo de las Naciones Unidas para la Infancia (UNICEF)</li>
+      <li>Organización de las Naciones Unidas para la Educación, la Ciencia y la Cultura (UNESCO)</li>
+    </ul>
+
+
+
     <h2 id="tesis">
       <a href="#tesis">#</a>
       Tesis y Argumentos
@@ -162,9 +137,9 @@
     <p>La equidad de género es un imperativo social y moral que busca la igualdad de oportunidades y derechos
       para todas las personas, independientemente de su género, con el fin de construir una sociedad más justa y
       equitativa.</p>
-  
+
     <h3>Argumentos</h3>
-  
+
     <ol>
       <li>
         <strong>Justicia y Derechos Humanos:</strong> La equidad de género es esencial para garantizar que
@@ -186,11 +161,11 @@
         crucial para la creación de una sociedad más justa y equitativa. Independientemente de si algunos participantes
         pueden tener egos inflados, el objetivo de la equidad de género sigue siendo una causa noble que beneficia a
         toda la humanidad.
-  
+
       </li>
       <!-- Agrega más argumentos según sea necesario -->
     </ol>
-  
+
     <h2 id="conclusion">
       <a href="#conclusion">#</a>
       Conclusión
@@ -198,12 +173,15 @@
     <p> Para Concluir debemos saber que la equidad de género es un asunto que afecta a todos en la sociedad.
       No se trata solo de "ellas" o "ellos", sino de "nosotros". Cuando se trabaja juntos para derribar
       estereotipos y promover la igualdad, todos se benefician.
-  
+
       A pesar de que aún hay trabajo por hacer, el progreso hacia la equidad de genero es evidente en muchas
       áreas. Se ha avanzado en la lucha contra la discriminacion y la violencia de genero. La igualdad de
       oportunidades está en aumento.
+
+      La equidad de género es un objetivo fundamental para la construcción de sociedades más justas e igualitarias. Es
+      un reto que requiere el compromiso de todos los sectores de la sociedad.
     </p>
-  
+
     <h2 id="bibliografia">
       <a href="#bibliografia">#</a>
       Bibliografia
