--- a/index.html
+++ b/index.html
@@ -188,19 +188,15 @@
     </h2>
     <h3>Referencias</h3>
     <li>
-      <strong>Corporación Humanas:</strong>
-      <a href="https://www.humanas.cl/">https://www.humanas.cl/</a>
+      <strong>ISSUU:</strong>
+      <a
+        href="https://issuu.com/gabrielalalaleo/docs/educacion_20inclusiva_20gabriela_20">https://issuu.com/gabrielalalaleo/docs/educacion_20inclusiva_20gabriela_20</a>
     </li>
     <li>
-      <strong>ONU Mujeres:</strong> <a href="https://www.unwomen.org/es">https://www.unwomen.org/es</a>
+      <strong>CONACAI:</strong> <a
+        href="http://www.consejoinfancia.gob.ar/institucional/">http://www.consejoinfancia.gob.ar/institucional/</a>
     </li>
-    <li>
-      <strong>Organización de las Naciones Unidas en Chile:</strong> <a
-        href="https://chile.un.org/es">https://chile.un.org/es</a>
-    </li>
-    <li>
-      <strong>ChatGPT:</strong> <a href="https://chat.openai.com/">https://chat.openai.com/</a>
-    </li>
+  
     <br>
   </main>
   <br>
