--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
 
-
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
@@ -22,12 +21,9 @@
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="assets/images/favicon.png">
-  <style>
-    body {
-      font-size: 19px;
-    }
-  </style>
+
 </head>
+</body>
 
 <body>
   <header>
@@ -42,13 +38,14 @@
       <a href="#indice">#</a>
       Índice
     </h2>
-    <ul>
+    <ul class="indice">
       <li><a href="#introduccion">Introducción</a></li>
       <li><a href="#marco-teorico">Marco Teórico</a></li>
       <li><a href="#tesis">Tesis y Argumentos</a></li>
       <li><a href="#conclusion">Conclusión</a></li>
       <li><a href="#bibliografia">Bibliografía</a></li>
     </ul>
+
     <h2 id="introduccion">
       <a href="#introduccion">#</a>
       Introducción
@@ -77,15 +74,26 @@
     <h3>Marco conceptual</h3>
 
     <ul>
-      <li>Sexo: Es la condición biológica que determina si una persona es hombre o mujer.</li>
-      <li>Género: Es una construcción social que asigna roles, comportamientos, actitudes y valores a las personas
-        en función de su sexo.</li>
-      <li>Estereotipos de género: Son creencias que asignan características y comportamientos específicos a las
-        mujeres y los hombres.</li>
-      <li>Discriminación de género: Es la distinción, exclusión o restricción basada en el sexo, género, orientación
+      <li>
+        <strong>Sexo:</strong> Es la condición biológica que determina si una persona es hombre o mujer.
+      </li>
+      <li>
+        <strong>Género:</strong> Es una construcción social que asigna roles, comportamientos, actitudes y valores a las
+        personas
+        en función de su sexo.
+      </li>
+      <li>
+        <strong>Estereotipos de género:</strong> Son creencias que asignan características y comportamientos específicos
+        a las
+        mujeres y los hombres.
+      </li>
+      <li>
+        <strong>Discriminación de género:</strong> Es la distinción, exclusión o restricción basada en el sexo, género,
+        orientación
         sexual o identidad de género que tenga por objeto o por resultado menoscabar o anular el reconocimiento, goce o
         ejercicio, en igualdad de condiciones, de los derechos humanos y las libertades fundamentales de las mujeres y
-        los hombres.</li>
+        los hombres.
+      </li>
     </ul>
 
     <h3>Importancia</h3>
@@ -170,7 +178,7 @@
       <a href="#conclusion">#</a>
       Conclusión
     </h2>
-    <p> Para Concluir debemos saber que la equidad de género es un asunto que afecta a todos en la sociedad.
+    <p> Para concluir, debemos saber que la equidad de género es un asunto que afecta a todos en la sociedad.
       No se trata solo de "ellas" o "ellos", sino de "nosotros". Cuando se trabaja juntos para derribar
       estereotipos y promover la igualdad, todos se benefician.
 
@@ -187,21 +195,28 @@
       Bibliografia
     </h2>
     <h3>Referencias</h3>
+
+    <ul>
+
     <li>
       <strong>ISSUU:</strong>
-      <a
+      <a target="_blank" rel="noopener"
         href="https://issuu.com/gabrielalalaleo/docs/educacion_20inclusiva_20gabriela_20">https://issuu.com/gabrielalalaleo/docs/educacion_20inclusiva_20gabriela_20</a>
     </li>
     <li>
-      <strong>CONACAI:</strong> <a
+      <strong>CONACAI:</strong>
+      <a target="_blank" rel="noopener"
         href="http://www.consejoinfancia.gob.ar/institucional/">http://www.consejoinfancia.gob.ar/institucional/</a>
     </li>
-  
+
+    </ul>
+
     <br>
   </main>
   <br>
 
-  <script nomodule src="https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js"> </script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
   <script>
     Fancybox.bind("[data-fancybox]", {
