--- a/index.html
+++ b/index.html
@@ -51,13 +51,10 @@
       Introducción
     </h2>
     <p>La equidad de género es un concepto fundamental en la sociedad contemporánea que se refiere a la igualdad
-      de
-      oportunidades, derechos y responsabilidades entre mujeres y hombres, sin importar sus diferencias
-      biológicas
-      o de género. Es un principio que busca eliminar la discriminación y promover la justicia en todos los
+      de oportunidades, derechos y responsabilidades entre mujeres y hombres, sin importar sus diferencias
+      biológicas o de género. Es un principio que busca eliminar la discriminación y promover la justicia en todos los
       ámbitos de la vida, incluyendo el acceso a la educación, la participación política, el empleo, la toma
-      de
-      decisiones y la eliminación de la violencia de género.</p>
+      de decisiones y la eliminación de la violencia de género.</p>
 
     <h2 id="marco-teorico">
       <a href="#marco-teorico">#</a>
@@ -79,8 +76,7 @@
       </li>
       <li>
         <strong>Género:</strong> Es una construcción social que asigna roles, comportamientos, actitudes y valores a las
-        personas
-        en función de su sexo.
+        personas en función de su sexo.
       </li>
       <li>
         <strong>Estereotipos de género:</strong> Son creencias que asignan características y comportamientos específicos
@@ -89,10 +85,8 @@
       </li>
       <li>
         <strong>Discriminación de género:</strong> Es la distinción, exclusión o restricción basada en el sexo, género,
-        orientación
-        sexual o identidad de género que tenga por objeto o por resultado menoscabar o anular el reconocimiento, goce o
-        ejercicio, en igualdad de condiciones, de los derechos humanos y las libertades fundamentales de las mujeres y
-        los hombres.
+        orientación sexual o identidad de género que tenga por objeto o por resultado menoscabar o anular el reconocimiento, goce o
+        ejercicio, en igualdad de condiciones, de los derechos humanos y las libertades fundamentales de las mujeres y los hombres.
       </li>
     </ul>
 
@@ -110,6 +104,13 @@
     <p>La equidad de género aún es un desafío en muchos países del mundo. Las mujeres siguen enfrentándose a la
       discriminación en todos los ámbitos de la vida, incluyendo el acceso a la educación, el empleo, la salud y la
       participación política.</p>
+
+    <a href="https://upload.wikimedia.org/wikipedia/commons/d/da/Mrs_Emmeline_Pankhurst%2C_Leader_of_the_Women%27s_Suffragette_movement%2C_is_arrested_outside_Buckingham_Palace_while_trying_to_present_a_petition_to_King_George_V_in_May_1914._Q81486.jpg"
+      data-fancybox data-caption="Patriarcado de mierda">
+      <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Mrs_Emmeline_Pankhurst%2C_Leader_of_the_Women%27s_Suffragette_movement%2C_is_arrested_outside_Buckingham_Palace_while_trying_to_present_a_petition_to_King_George_V_in_May_1914._Q81486.jpg/443px-thumbnail.jpg" />
+    </a>
+      
 
     <h2>Acciones para promover la equidad de género</h2>
 
