--- a/index.html
+++ b/index.html
@@ -180,6 +180,11 @@
       <li>
         <strong>Participación Política:</strong> Promover la equidad de género en la política es fundamental
         para garantizar una representación justa de mujeres y hombres en los órganos de toma de decisiones.
+        <a href="https://pbs.twimg.com/media/EtvKblSVEAMkuZT?format=jpg&name=medium" data-fancybox
+          data-caption="Tu mamá me dijo que eres adoptado">
+          <img src="https://pbs.twimg.com/media/EtvKblSVEAMkuZT?format=jpg&name=medium" />
+
+        </a>
       </li>
       <li>
         <strong> ¿Una guerra de egos o una batalla necesaria?:</strong> La búsqueda de la equidad de género a menudo se
