--- a/index.html
+++ b/index.html
@@ -187,15 +187,30 @@
         </a>
       </li>
       <li>
-        <strong> ¿Una guerra de egos o una batalla necesaria?:</strong> La búsqueda de la equidad de género a menudo se
-        debate
-        como una lucha que involucra diferentes perspectivas. Algunos argumentan que esta lucha es impulsada por egos
-        individuales, una búsqueda de reconocimiento y poder. Sin embargo, otros sostienen que es una batalla necesaria
-        para corregir desigualdades profundamente arraigadas en la sociedad.
-        Es importante recordar que, independientemente de las motivaciones iniciales, el resultado de esta lucha es
-        crucial para la creación de una sociedad más justa y equitativa. Independientemente de si algunos participantes
-        pueden tener egos inflados, el objetivo de la equidad de género sigue siendo una causa noble que beneficia a
-        toda la humanidad.
+        <strong>Equidad de género ¿guerra de egos o una batalla necesaria?:</strong>
+  <p>
+    La equidad de género es un concepto filosófico que se refiere a la igualdad de derechos, oportunidades y trato entre mujeres y hombres. Es una batalla necesaria para lograr una sociedad justa e igualitaria.
+  </p>
+  <p>
+    Desde una perspectiva filosófica, la equidad de género es una lucha por la justicia. Las mujeres han sido históricamente discriminadas y oprimidas por el patriarcado, un sistema de poder que coloca a los hombres en una posición de privilegio sobre las mujeres. La equidad de género busca desmantelar este sistema y crear una sociedad en la que las mujeres tengan las mismas oportunidades que los hombres.
+  </p>
+  <p>
+    La equidad de género no es una guerra de egos. No se trata de que las mujeres quieran superar a los hombres o de que los hombres quieran mantener su supremacía. Se trata de que todos, hombres y mujeres, tengamos las mismas oportunidades para desarrollarnos como personas y contribuir a la sociedad.
+  </p>
+  <p>
+    La equidad de género es un derecho humano fundamental. Todas las personas, independientemente de su género, tienen derecho a una vida libre de discriminación y violencia. La equidad de género es también una condición necesaria para el desarrollo sostenible. Una sociedad justa e igualitaria es una sociedad más próspera y equitativa para todos.
+  </p>
+  <p>
+    <b>Algunos argumentos filosóficos a favor de la equidad de género:</b>
+  </p>
+  <ul>
+    <li>El argumento de la igualdad: Todos los seres humanos somos iguales en dignidad y derechos. Por lo tanto, mujeres y hombres deben tener las mismas oportunidades y trato.</li>
+    <li>El argumento de la justicia: El patriarcado es un sistema injusto que discrimina a las mujeres. La equidad de género es una lucha por la justicia.</li>
+    <li>El argumento de la utilidad: Una sociedad justa e igualitaria es una sociedad más próspera y equitativa para todos.</li>
+  </ul>
+  <p>
+    La equidad de género es un desafío complejo, pero es una lucha necesaria para lograr una sociedad justa e igualitaria.
+  </p>
 
       </li>
       <!-- Agrega más argumentos según sea necesario -->
@@ -235,7 +250,12 @@
         <a target="_blank" rel="noopener"
           href="http://www.consejoinfancia.gob.ar/institucional/">http://www.consejoinfancia.gob.ar/institucional/</a>
       </li>
+<li>
+  <strong>La Declaración Universal de Derechos Humanos:</strong>
+  <a target="_blank" rel="noopener"
+    href="https://www.un.org/en/universal-declaration-human-rights/">https://www.un.org/en/universal-declaration-human-rights/</a>
 
+</li>
     </ul>
 
     <br>
