--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
       Índice
     </h2>
     <ul class="indice">
-      <li><a href="#introduccion" title="Preámbulo para entender mejor acerca del tema">Introducción</a></li>
-      <li><a href="#marco-teorico" title="">Marco Teórico</a></li>
-      <li><a href="#acciones-promotoras-de-equidad" title="Maneras de impulsar la equidad">Acciones para promover la equidad de género</a></li>
-      <li><a href="#tesis" title="">Tesis y Argumentos</a></li>
-      <li><a href="#conclusion">Conclusión</a></li>
-      <li><a href="#bibliografia">Bibliografía</a></li>
+      <li><a class="reference" href="#introduccion" title="Preámbulo para entender mejor acerca del tema">Introducción</a></li>
+      <li><a class="reference" href="#marco-teorico" title="">Marco Teórico</a></li>
+      <li><a class="reference" href="#acciones-promotoras-de-equidad" title="Maneras de impulsar la equidad">Acciones para promover la equidad de género</a></li>
+      <li><a class="reference" href="#tesis" title="">Tesis y Argumentos</a></li>
+      <li><a class="reference" href="#conclusion">Conclusión</a></li>
+      <li><a class="reference" href="#bibliografia">Bibliografía</a></li>
     </ul>
   
   
@@ -275,17 +275,17 @@
   
       <li>
         <strong>ISSUU:</strong>
-        <a target="_blank" rel="noopener"
+        <a class="reference" target="_blank" rel="noopener"
           href="https://issuu.com/gabrielalalaleo/docs/educacion_20inclusiva_20gabriela_20">https://issuu.com/gabrielalalaleo/docs/educacion_20inclusiva_20gabriela_20</a>
       </li>
       <li>
         <strong>CONACAI:</strong>
-        <a target="_blank" rel="noopener"
+        <a class="reference" target="_blank" rel="noopener"
           href="http://www.consejoinfancia.gob.ar/institucional/">http://www.consejoinfancia.gob.ar/institucional/</a>
       </li>
       <li>
         <strong>La Declaración Universal de Derechos Humanos:</strong>
-        <a target="_blank" rel="noopener"
+        <a class="reference" target="_blank" rel="noopener"
           href="https://www.un.org/en/universal-declaration-human-rights/">https://www.un.org/en/universal-declaration-human-rights/</a>
       </li>
 
