--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a href="#indice" title="Anclar este contenido a su pantalla">#</a>
       Índice
     </h2>
-    <ul class="indice">
+    <ul class="index">
       <li><a class="reference" href="#introduccion" title="Preámbulo para entender mejor acerca del tema">Introducción</a></li>
       <li><a class="reference" href="#marco-teorico" title="">Marco Teórico</a></li>
       <li><a class="reference" href="#acciones-promotoras-de-equidad" title="Maneras de impulsar la equidad">Acciones para promover la equidad de género</a></li>
