--- a/index.html
+++ b/index.html
@@ -66,15 +66,18 @@
       Introducción
     </h2>
 
-    <p>La equidad de género es un pilar esencial en nuestra sociedad moderna.<br> Este concepto se refiere a la igualdad de
-      oportunidades, derechos y responsabilidades para todas las personas, independientemente de su sexo biológico o
-      identidad de género. Su objetivo es erradicar cualquier forma de discriminación y promover la justicia en todas las
-      esferas de la vida.
+    <p>
+      <b>La equidad de género es un pilar esencial en nuestra sociedad moderna.</b><br>
+      Este concepto se refiere a la igualdad de oportunidades, derechos y responsabilidades para todas las personas,
+      independientemente de su sexo biológico o identidad de género. Su objetivo es erradicar cualquier forma de
+      discriminación y promover la justicia en todas las esferas de la vida.
+    <br>
     <br>
       Este principio abarca una amplia gama de aspectos, desde el acceso a la educación hasta la participación política,
       pasando por el empleo y la toma de decisiones. La equidad de género no sólo busca garantizar que hombres y mujeres
       tengan las mismas oportunidades para prosperar y alcanzar sus metas, sino que también se esfuerza por eliminar la
       violencia de género en todas sus formas.
+    <br>
     <br>
       La equidad de género reconoce y valora las diferencias entre hombres y mujeres, y entiende que estas diferencias no
       deben ser utilizadas como base para la discriminación o el trato injusto. En lugar de ello, busca crear una sociedad
