--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
   <header>
 
     <h1>Conozcamos sobre la Equidad de Género</h1>
-    <h6>Es de suma importancia promover y respetar la igualdad entre hombres y mujeres en todos los ámbitos de la
-      vida.<br>
-      En esta página se tiene como objetivo favorecer aquello.</h6>
+    <h6>
+      Es de suma importancia promover y respetar la igualdad entre hombres y mujeres en todos los ámbitos de la
+      vida. En esta página se tiene como objetivo favorecer aquello.
+    </h6>
     <div class="bg"></div>
 
   </header>
@@ -67,7 +68,7 @@
     </h2>
 
     <p>
-      <b>La equidad de género es un pilar esencial en nuestra sociedad moderna.</b><br>
+      <h4>La equidad de género es un pilar esencial en nuestra sociedad moderna.</h4>
       Este concepto se refiere a la igualdad de oportunidades, derechos y responsabilidades para todas las personas,
       independientemente de su sexo biológico o identidad de género. Su objetivo es erradicar cualquier forma de
       discriminación y promover la justicia en todas las esferas de la vida.
@@ -218,27 +219,12 @@
       <li>
         <b>Equidad de género, ¿una guerra de egos o una batalla necesaria?:</b>
         <p>
-          La equidad de género es un concepto filosófico que se refiere a la igualdad de derechos, oportunidades y trato
-          entre mujeres y hombres. Es una batalla necesaria para lograr una sociedad justa e igualitaria.
-        </p>
-        <p>
-          Desde una perspectiva filosófica, la equidad de género es una lucha por la justicia. Las mujeres han sido
-          históricamente discriminadas y oprimidas por el patriarcado, un sistema de poder que coloca a los hombres en
-          una
-          posición de privilegio sobre las mujeres. La equidad de género busca desmantelar este sistema y crear una
-          sociedad en la que las mujeres tengan las mismas oportunidades que los hombres.
-        </p>
-        <p>
-          La equidad de género no es una guerra de egos. No se trata de que las mujeres quieran superar a los hombres o
-          de
-          que los hombres quieran mantener su supremacía. Se trata de que todos, hombres y mujeres, tengamos las mismas
-          oportunidades para desarrollarnos como personas y contribuir a la sociedad.
-        </p>
-        <p>
-          La equidad de género es un derecho humano fundamental. Todas las personas, independientemente de su género,
-          tienen derecho a una vida libre de discriminación y violencia. La equidad de género es también una condición
-          necesaria para el desarrollo sostenible. Una sociedad justa e igualitaria es una sociedad más próspera y
-          equitativa para todos.
+          La equidad de género, un derecho humano fundamental, busca igualdad de derechos y oportunidades para todos,
+          independientemente del género. Este concepto filosófico desafía el patriarcado histórico, un sistema que privilegia a
+          los hombres sobre las mujeres, con el objetivo de crear una sociedad justa e igualitaria.
+          <em>No es una competencia de egos, sino un esfuerzo por garantizar que todos tengan las mismas oportunidades para crecer
+          y contribuir a la sociedad</em>. Es esencial para el desarrollo sostenible, ya que una sociedad equitativa es más próspera
+          para todos.
         </p>
         <p>
           <b>Algunos argumentos filosóficos a favor de la equidad de género:</b>
