--- a/index.html
+++ b/index.html
@@ -139,9 +139,8 @@
     <h3>Desafíos</h3>
 
     <p>
-      La equidad de género aún es un desafío en muchos países del mundo. Las mujeres siguen enfrentándose a la
-      discriminación en todos los ámbitos de la vida, incluyendo el acceso a la educación, el empleo, la salud y la
-      participación política.
+      El acceso a la educación, el empleo, la salud y la participación política sigue siendo desigual para las mujeres en
+      muchos países. La discriminación de género es un desafío que persiste en todas las áreas de la vida.
     </p>
 
     <a class="resource" href="https://upload.wikimedia.org/wikipedia/commons/d/da/Mrs_Emmeline_Pankhurst%2C_Leader_of_the_Women%27s_Suffragette_movement%2C_is_arrested_outside_Buckingham_Palace_while_trying_to_present_a_petition_to_King_George_V_in_May_1914._Q81486.jpg"
