--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <p>
       El acceso a la educación, el empleo, la salud y la participación política sigue siendo desigual para las mujeres en
-      muchos países. La discriminación de género es un desafío que persiste en todas las áreas de la vida.
+      muchos países. La discriminación de género es un desafío que persiste en todas las áreas de la vida. 
     </p>
 
     <a class="resource" href="https://upload.wikimedia.org/wikipedia/commons/d/da/Mrs_Emmeline_Pankhurst%2C_Leader_of_the_Women%27s_Suffragette_movement%2C_is_arrested_outside_Buckingham_Palace_while_trying_to_present_a_petition_to_King_George_V_in_May_1914._Q81486.jpg"
@@ -150,6 +150,10 @@
         src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Mrs_Emmeline_Pankhurst%2C_Leader_of_the_Women%27s_Suffragette_movement%2C_is_arrested_outside_Buckingham_Palace_while_trying_to_present_a_petition_to_King_George_V_in_May_1914._Q81486.jpg/443px-thumbnail.jpg" />
     </a>
 
+    <p>
+      Los hombres también sufren por la desigualdad de género, aunque de formas diferentes a las mujeres. Esto se basa en
+      estereotipos y roles sociales que limitan las posibilidades y libertades de las personas según su sexo.
+    </p>
 
     <h2 id="acciones-promotoras-de-equidad">
       <a href="#acciones-promotoras-de-equidad" title="Anclar este contenido a su pantalla">#</a>
