--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
   <header>
 
-    <h1>Conozcamos sobre la Equidad de Género</h1>
+    <h1>Conozcamos sobre la<br>
+      Equidad de Género
+    </h1>
     <h6>
       Es de suma importancia promover y respetar la igualdad entre hombres y mujeres en todos los ámbitos de la
       vida. En esta página se tiene como objetivo favorecer aquello.
